# smart_cage_ros

./: README.md  README.org  SETUP_WINDOWS.org  smart_cage.repos  smart_cage_https.repos  smart_cage_ssh.repos
smart_cage/: CMakeLists.txt  README.org  package.xml  setup.cfg  setup.py
smart_cage/launch/: smart_cage.launch.py
smart_cage/smart_cage/: smart_cage.py  smart_cage_controller.py  smart_cage_controller_node.py  smart_cage_node.py
smart_cage_data_writer/: README.org  package.xml  setup.cfg  setup.py
smart_cage_data_writer/launch/: data_writer.launch.py
smart_cage_data_writer/smart_cage_data_writer/: data_writer_node.py  image_data_writer_node.py  lickport_data_writer_node.py  tunnel_data_writer_node.py
smart_cage_msgs/: CMakeLists.txt  README.org  package.xml
smart_cage_msgs/msg/: DataWriterControl.msg  LickportState.msg  LickportTarget.msg  Session.msg  StartNewSession.msg  TrainingPeriod.msg  TunnelControl.msg  TunnelState.msg
