<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_cage</name>
  <version>0.0.0</version>
  <description>Smart cage ROS interface</description>

  <maintainer email="peterpolidoro@gmail.com">Peter Polidoro</maintainer>

  <license>BSD</license>

  <author>Peter Polidoro</author>

  <exec_depend>phidgets_python_api</exec_depend>
  <exec_depend>joint_control_msgs</exec_depend>
  <exec_depend>lickport</exec_depend>
  <exec_depend>tunnel</exec_depend>
  <exec_depend>smart_cage_msgs</exec_depend>
  <exec_depend>smart_cage_data_writer</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
